--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,71 +1,76 @@
-.App {
-	background-color: rgb(238, 238, 238);
-	width: 100vw;
-	height: 100vh;
+.container {
+	width: 400px;
+	height: 50px;
+	background-color: black;
+	
+}
+
+.counter {
+	width: 100%;    
+	height: 40px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+	justify-content:center;	
+	background-color: #1c1b1b;
+	font-size: 24px;
+	font-weight: bold;
+	color: grey;
+	margin-left: 3px;
+	margin-right: 3px;
+}
+
+.buttons {
 	display: flex;
-	flex-direction: column;
-	align-items: center;
+    align-items: center;
+    flex-direction: row;
 	justify-content: center;
 }
 
-.stop-watch {
-	height: 85vh;
-	width: 23vw;
-	background-color: #0d0c1b;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: space-between;
+button {
+	background: blue;
+	color:beige;
+	margin-left: 3px;
+	margin-right: 3px;
 }
 
-.timer {
-	margin: 3rem 0;
-	width: 100%;
-	display: flex;
-	height: 12%;
+.text {
+	font-size: 24px;
+	font-weight: bold;
+	width: 100%;    
+	height: 40px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 	justify-content: center;
-	align-items: center;
+	color: grey;
+}
+.input {
+	width: 100%;    
+	height: 40px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+	justify-content:center;	
+	background-color: white;
+	font-size: 24px;
+	font-weight: bold;
+	color: black;
+	margin-left: 3px;
+	margin-right: 3px;
 }
 
-.digits {
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	font-size: 3rem;
-	color: #f5f5f5;
-}
-
-.mili-sec {
-	color: #e42a2a;
-}
-
-.Control-Buttons {
-	margin: 3rem 0;
-	width: 100%;
-	box-sizing: border-box;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-.btn-grp {
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
-}
-
-.btn {
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	width: 10vw;
-	height: 5vh;
-	border-radius: 14px;
-	margin: 0px 6px;
-	display: flex;
-	border: 2px solid #e42a2a;
-	justify-content: center;
-	align-items: center;
-	cursor: pointer;
-	color: #f5f5f5;
-}
-
-.btn-one {
-	background-color: #e42a2a;
+.countdown {
+	width: 130px;    
+	height: auto;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+	justify-content:center;	
+	background-color: #1c1b1b;
+	font-size: 24px;
+	font-weight: bold;
+	color: grey;
+	margin-left: 3px;
+	margin-right: 3px;
 }
